src/app/app.component.css
.Primary{
  font-weight: bold;
  margin: 0;
}

.headerSpan{
  flex: 1 1 auto;
  cursor: pointer;
  font-weight: bold;
  font-size: larger;
  margin-left: 1vw;
}

.Header{
  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
  padding: 0;

}
.HeaderMenuLoggedIn{
  background-image: url("../../src/images/user.png");
  background-size: 100%;
}

.HeaderMenuAnonymous {
  background-image: url("../../src/images/dotdotdot.png");
  background-size: 100%;
}

